<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/homeMenu"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/acasa"/>
        <item
            android:id="@+id/ticketMenu"
            android:icon="@drawable/baseline_directions_bus_24"
            android:title="@string/cumpara_bilete" />

        <item
            android:id="@+id/mapMenu"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/map_nav" />
        <item
            android:id="@+id/myticketsMenu"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/biletele_mele" />
        <item
            android:id="@+id/settingsMenu"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/setari" />
        <item
            android:id="@+id/pannelMenu"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/panou_admin" />
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/logoutMenu"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout_nav" />
        </menu>
    </item>

</menu>