<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/password2Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordRegister"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textColorHighlight="@color/app_buttons"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/errormsgRegister"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameRegister"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password2Register"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/app_buttons"
            android:text="@string/register" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/socialicons"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/app_buttons"
        android:text="@string/login" />

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/registerBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/password"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="249dp"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:backgroundTint="@color/app_buttons"-->
<!--        android:text="@string/register" />-->



    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_below="@+id/registerBtnRegister"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="13dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/google_btnRegister"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:contentDescription="google"
            android:src="@drawable/google" />

    </LinearLayout>

    <TextView
        android:id="@+id/errormsgRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="22dp"
        android:minHeight="20dp"
        android:text=""
        android:textColor="@color/app_buttons"
        android:textSize="20sp" />

</RelativeLayout>